Mise à jour date.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,5 @@
 project:
-  title: "La médecine factuelle : motivations, définition."
+  title: "EBVM_motiv_CM"
   type: website
   output-dir: docs
 
